--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "graphql-cli": "^3.0.14",
     "graphql-yoga": "^1.18.3",
     "nodemon": "^2.0.2",
+    "parse": "^2.12.0",
     "prisma": "^1.34.10",
     "prisma-binding": "^2.3.16"
   }
