--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "graphql": "^14.6.0",
     "graphql-cli": "^3.0.14",
     "graphql-yoga": "^1.18.3",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.2",
     "parse": "^2.12.0",
     "prisma": "^1.34.10",
