--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "apollo-boost": "^0.4.7",
     "babel-plugin-styled-components": "^1.10.7",
+    "google-map-react": "^1.1.7",
     "graphql": "^14.6.0",
     "next": "^9.3.4",
     "next-with-apollo": "^5.0.0",
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.3",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "styled-components": "^5.0.1"
   },
