--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-styled-components": "^1.10.7",
     "google-map-react": "^1.1.7",
     "graphql": "^14.6.0",
+    "moment": "^2.24.0",
     "next": "^9.3.4",
     "next-with-apollo": "^5.0.0",
     "nprogress": "^0.2.0",
@@ -23,6 +24,7 @@
     "react-apollo": "^3.1.3",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-moment": "^0.9.7",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
