--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "apollo-boost": "^0.4.7",
     "babel-plugin-styled-components": "^1.10.7",
+    "classnames": "^2.2.6",
     "google-map-react": "^1.1.7",
     "graphql": "^14.6.0",
     "moment": "^2.24.0",
