--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-google-maps/api": "^1.8.6",
     "apollo-boost": "^0.4.7",
     "babel-plugin-styled-components": "^1.10.7",
     "classnames": "^2.2.6",
     "google-map-react": "^1.1.7",
     "graphql": "^14.6.0",
+    "isomorphic-unfetch": "^3.0.0",
     "moment": "^2.24.0",
     "next": "^9.3.4",
     "next-with-apollo": "^5.0.0",
@@ -27,6 +29,7 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
+    "react-share": "^4.1.0",
     "styled-components": "^5.0.1",
     "sweetalert2": "^9.10.10"
   },
