--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-apollo": "^3.1.3",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.0.0",
     "react-moment": "^0.9.7",
     "react-share": "^4.1.0",
     "styled-components": "^5.0.1",
