--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
     "deploy": "prisma deploy --env-file variables.env"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "graphql": "^14.6.0",
     "graphql-cli": "^3.0.14",
     "graphql-yoga": "^1.18.3",
