--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,14 @@
     "@react-google-maps/api": "^1.8.6",
     "apollo-boost": "^0.4.7",
     "babel-plugin-styled-components": "^1.10.7",
+    "babel-polyfill": "^6.26.0",
+    "brotli": "^1.3.2",
     "classnames": "^2.2.6",
+    "emotion": "^10.0.27",
     "google-map-react": "^1.1.7",
     "graphql": "^14.6.0",
+    "image-extensions": "^1.1.0",
+    "is-url": "^1.2.4",
     "isomorphic-unfetch": "^3.0.0",
     "moment": "^2.24.0",
     "next": "^9.3.4",
@@ -29,10 +34,15 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "react-hooks": "^1.0.1",
     "react-moment": "^0.9.7",
     "react-share": "^4.1.0",
+    "slate": "^0.57.2",
+    "slate-history": "^0.57.2",
+    "slate-react": "^0.57.2",
     "styled-components": "^5.0.1",
-    "sweetalert2": "^9.10.10"
+    "sweetalert2": "^9.10.10",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
