--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "brotli": "^1.3.2",
     "classnames": "^2.2.6",
     "emotion": "^10.0.27",
+    "global": "^4.4.0",
     "google-map-react": "^1.1.7",
     "graphql": "^14.6.0",
     "image-extensions": "^1.1.0",
