--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start -p $PORT",
-    "herkoku-postbuild": "next build"
+    "heroku-postbuild": "next build"
   },
   "keywords": [],
   "author": "",
