--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "nodemon -e js,graphql -x node src/createServer.js",
     "dev": "nodemon -e js,graphql -x node --inspect src/createServer.js",
-    "deploy": "prisma deploy --env-file variables.env"
+    "deploy": "prisma deploy --env-file variables.env",
+    "backup": "node data/backup.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -15,6 +16,7 @@
     "graphql-cli": "^3.0.14",
     "graphql-yoga": "^1.18.3",
     "heroku-ssl-redirect": "0.0.4",
+    "mkdirp": "^1.0.4",
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.2",
     "parse": "^2.12.0",
