--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,12 @@
     "start": "nodemon -e js,graphql -x node src/createServer.js",
     "dev": "nodemon -e js,graphql -x node --inspect src/createServer.js",
     "deploy": "prisma deploy --env-file variables.env",
-    "backup": "node data/backup.js"
+    "backup": "node data/backup.js",
+    "scrapeEmails": "node data/scrapeEmails.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "csv-writer": "^1.6.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^14.6.0",
