--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "react-hooks": "^1.0.1",
+    "react-intersection-observer": "^8.26.2",
     "react-moment": "^0.9.7",
     "react-share": "^4.1.0",
     "slate": "^0.57.2",
