--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "backfill": "node data/backfillCountries.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.2.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
