paywalls, comments and upvoting

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "backfill": "node data/backfillCountries.js"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
     "@sendgrid/mail": "^7.2.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
