--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
-    "@sendgrid/mail": "^7.2.0",
+    "@sendgrid/mail": "^7.2.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -31,6 +31,7 @@
     "parse": "^2.12.0",
     "prisma": "^1.34.10",
     "prisma-binding": "^2.3.16",
+    "stripe": "^8.84.0",
     "util": "^0.12.3"
   }
 }
