--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@react-google-maps/api": "^1.8.6",
+    "@stripe/stripe-js": "^1.8.0",
     "apollo-boost": "^0.4.7",
     "babel-plugin-styled-components": "^1.10.7",
     "babel-polyfill": "^6.26.0",
@@ -43,8 +44,10 @@
     "slate": "^0.57.2",
     "slate-history": "^0.57.2",
     "slate-react": "^0.57.2",
+    "stripe": "^8.84.0",
     "styled-components": "^5.0.1",
     "sweetalert2": "^9.10.10",
+    "universal-cookie": "^4.0.3",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
