--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react": "^16.13.1",
     "react-apollo": "^3.1.3",
     "react-bootstrap": "^1.0.0",
+    "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "react-hooks": "^1.0.1",
