--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-gtm": "0.0.2",
+    "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
     "react-hooks": "^1.0.1",
     "react-intersection-observer": "^8.29.0",
