--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "react-bootstrap": "^1.3.0",
     "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
+    "react-facebook-pixel": "^1.0.3",
     "react-gtm": "0.0.2",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
