--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "prisma": "^1.34.10",
     "prisma-binding": "^2.3.16",
     "stripe": "^8.89.0",
-    "util": "^0.12.3"
+    "util": "^0.12.3",
+    "voucher-code-generator": "^1.1.1"
   }
 }
