--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-bootstrap": "^1.3.0",
+    "react-cookie-consent": "^6.2.1",
     "react-csv": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-facebook-pixel": "^1.0.3",
