--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
     "react-hooks": "^1.0.1",
+    "react-hotjar": "^2.2.1",
     "react-intersection-observer": "^8.29.0",
     "react-linkedin-insight": "0.0.5",
     "react-moment": "^0.9.7",
