--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "global": "^4.4.0",
     "google-map-react": "^1.1.7",
     "graphql": "^14.7.0",
+    "html-react-parser": "^1.2.1",
     "image-extensions": "^1.1.0",
     "is-url": "^1.2.4",
     "isomorphic-unfetch": "^3.0.0",
