--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "nodemon -e js,graphql -x node src/createServer.js",
     "dev": "nodemon -e js,graphql -x node --inspect src/createServer.js",
-    "deploy": "prisma deploy --env-file variables.env",
+    "deploy": "prisma deploy --force --env-file variables.env",
     "scrapeEmails": "node data/scrapeEmails.js",
     "backfill": "node data/backfillCountries.js",
     "updateMailingList": "node data/updateMailingList.js",
